Added a few more skeleton header files, preprocessor directives, and a partial and utterly untested implmentation of the GameObject base class.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+#SDL Libary
 lib/SDL
 lib/sdl_image
 lib/sdl_ttf
 .DS_Store
-*.xcodeproj/
+#Doxygen generated docs
 html/
 latex/
-*.tmp
 build/
+# IDE and editor temporary files
+# Vim swapfiles
+*.swp
+# XCode project files
+*.xcodeproj/
+#Other Temp
+*.tmp
