--- a/Rapid/Makefile
+++ b/Rapid/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -o game MainFull.cpp CMeshLoader.cpp CShader.cpp CMesh.cpp Enemy.cpp Camera.cpp Map.cpp -DGL_GLEXT_PROTOTYPES -lglut -lGL -lGLU
+	g++ -o game MainFull.cpp CMeshLoader.cpp CShader.cpp CMesh.cpp Enemy.cpp Camera.cpp Map.cpp HUD.cpp -DGL_GLEXT_PROTOTYPES -lglut -lGL -lGLU
 
 run: 
 	./game
