added a mac command for Makefile to compile for the mac

--- a/Rapid/Makefile
+++ b/Rapid/Makefile
@@ -1,5 +1,8 @@
 all:
 	g++ -o game MainFull.cpp CMeshLoader.cpp CShader.cpp CMesh.cpp Enemy.cpp GameObject.cpp InputManager.cpp Player.cpp Camera.cpp Collision.cpp Bullet.cpp Bullets.cpp Map.cpp HUD.cpp Turret.cpp Turrets.cpp -DGL_GLEXT_PROTOTYPES -lglut -lGL -lGLU
 
+mac:
+	g++ -o game MainFull.cpp CMeshLoader.cpp CShader.cpp CMesh.cpp Enemy.cpp GameObject.cpp InputManager.cpp Player.cpp Camera.cpp Collision.cpp Bullet.cpp Bullets.cpp Map.cpp HUD.cpp -DGL_GLEXT_PROTOTYPES -framework GLUT -framework OpenGL -framework Cocoa
+
 run: 
 	./game
