--- a/src/SConstruct
+++ b/src/SConstruct
@@ -1,4 +1,8 @@
-import os
-generalEnv = Environment( CC = 'g++', CCFLAGS="-I./game -I./engine", 
-LIBS=["GL", "SDL"], FRAMEWORKS= ['-framework OpenGL','framework SDL'])
-generalEnv.Program(source= ["Main.cpp"] )
+import os, os.path, shutil
+env = Environment( CC = 'g++', CCFLAGS="-I./game -I./engine")
+if (env['PLATFORM'] == 'darwin'):
+   env.Append(FRAMEWORKS= ['OpenGL','SDL'])
+else:
+   env.Append(LIBS=["GL", "SDL"])    
+
+env.Program(source= ["Main.cpp"] )
