--- a/src/engine/SConstruct
+++ b/src/engine/SConstruct
@@ -1,8 +1,9 @@
 import os, os.path, shutil
-env = Environment( CC = 'g++', CCFLAGS="-I./game -I./engine")
+env = Environment( CC = 'g++')
 if (env['PLATFORM'] == 'darwin'):
    env.Append(FRAMEWORKS= ['OpenGL','SDL'])
 else:
    env.Append(LIBS=["GL", "SDL"])    
 
 env.Object(Glob('*.cpp') )
+env.Library('RepublicEngine',Glob('*.o') )
