--- a/src/tools/modelviewer/SConstruct
+++ b/src/tools/modelviewer/SConstruct
@@ -1,9 +1,11 @@
 import os, os.path, shutil
-env = Environment( CC = 'g++', CCFLAGS=" -I../../engine")
+env = Environment( CC = 'g++', CPPPATH='../../engine', LIBPATH='../../engine' )
 if (env['PLATFORM'] == 'darwin'):
    env.Append(FRAMEWORKS= ['OpenGL','SDL'])
 else:
    env.Append(LIBS=["GL", "SDL"])    
 
-#SConscript('../../engine/SConstruct')
-env.Program('modelviewer', ["main.cpp"]+Glob('*.o')+Glob('../../engine/*.cpp'))
+env.Append(LIBS=["RepublicEngine"]+env['LIBS'])
+
+SConscript('../../engine/SConstruct')
+env.Program('modelviewer', ["modelviewer.cpp"])
