Fixed build script and added to gitignore -- AJM

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ build/
 # IDE and editor temporary files
 # Vim swapfiles
 *.swp
+#Emacs swapfile?
+*.swo
 # XCode project files
 *.xcodeproj/
 *HelloSDL/
