--- a/src/SConstruct
+++ b/src/SConstruct
@@ -8,7 +8,7 @@ else:
    env.Append(LIBS=["GL", "SDL"])
 
 if (env['PLATFORM'] == 'darwin'):
-   env.Append(LIBS=["RepublicEngine","RepublicGame"]+env['FRAMEWORKS'])
+   env.Append(LIBS=["RepublicEngine","RepublicGame"])
 else:
    env.Append(LIBS=["RepublicEngine","RepublicGame"]+env['LIBS'])
 
