--- a/src/SConstruct
+++ b/src/SConstruct
@@ -3,7 +3,7 @@ import os, os.path, shutil
 includes = ['./engine','./game']
 env = Environment( CC = 'g++', CPPPATH=includes, LIBPATH=includes )
 if (env['PLATFORM'] == 'darwin'):
-   env.Append(FRAMEWORKS= ['OpenGL','SDL'])
+   env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa'])
 else:
    env.Append(LIBS=["GL", "SDL"])
 
@@ -15,4 +15,4 @@ else:
 for subdir in ['engine','game','tools']:
    env.SConscript('%s/SConstruct' % subdir, {'env':env})
 
-env.Program('starrepublic', Glob("*.cpp")+Glob("./game/*.cpp"))
+env.Program('starrepublic', Glob("*.cpp")+Glob("./game/*.cpp")+['SDLMain.m'])
