--- a/src/SConstruct
+++ b/src/SConstruct
@@ -2,8 +2,10 @@ import os, os.path, shutil
 
 includes = ['./engine','./game']
 env = Environment( CC = 'g++', CPPPATH=includes, LIBPATH=includes )
+mainfiles = ['Main.cpp']
 if (env['PLATFORM'] == 'darwin'):
    env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa'])
+   mainfiles+=['SDLMain.m']
 else:
    env.Append(LIBS=["GL", "SDL"])
 
@@ -15,4 +17,4 @@ else:
 for subdir in ['engine','game','tools']:
    env.SConscript('%s/SConstruct' % subdir, {'env':env})
 
-env.Program('starrepublic', Glob("*.cpp")+Glob("./game/*.cpp")+['SDLMain.m'])
+env.Program('starrepublic', mainfiles+Glob("./game/*.cpp"))
