--- a/src/SConstruct
+++ b/src/SConstruct
@@ -4,10 +4,10 @@ includes = ['./engine','./game']
 env = Environment( CC = 'g++', CPPPATH=includes, LIBPATH=includes )
 mainfiles = ['Main.cpp']
 if (env['PLATFORM'] == 'darwin'):
-   env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa'])
+   env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa', 'SDL_mixer'])
    mainfiles+=['SDLMain.m']
 else:
-   env.Append(LIBS=["GL", "SDL"])
+   env.Append(LIBS=["GL", "SDL", "SDL_mixer"])
 
 if (env['PLATFORM'] == 'darwin'):
    env.Append(LIBS=["RepublicEngine","RepublicGame"])
