--- a/src/engine/SConstruct
+++ b/src/engine/SConstruct
@@ -1,8 +1,8 @@
 import os, os.path, shutil
 env = Environment( CC = 'g++')
 if (env['PLATFORM'] == 'darwin'):
-   env.Append(FRAMEWORKS= ['OpenGL','SDL'])
+   env.Append(FRAMEWORKS= ['OpenGL','SDL', 'SDL_mixer'])
 else:
-   env.Append(LIBS=["GL", "SDL"])    
+   env.Append(LIBS=["GL", "SDL", "SDL_mixer"])    
 
 env.Library('RepublicEngine',Glob('*.cpp') )
