--- a/src/SConstruct
+++ b/src/SConstruct
@@ -7,7 +7,7 @@ if (env['PLATFORM'] == 'darwin'):
    env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa'])
    mainfiles+=['SDLMain.m']
 else:
-   env.Append(LIBS=["GL", "SDL"])
+   env.Append(LIBS=["GL", "SDL", "SDL_mixer"])
 
 if (env['PLATFORM'] == 'darwin'):
    env.Append(LIBS=["RepublicEngine","RepublicGame"])
