--- a/src/SConstruct
+++ b/src/SConstruct
@@ -8,7 +8,7 @@ if (env['PLATFORM'] == 'darwin'):
    env.Append(FRAMEWORKS= ['OpenGL','SDL', 'Cocoa', 'SDL_mixer'])
    mainfiles+=['SDLMain.m']
 else:
-   env.Append(LIBS=["GL", "SDL", "SDL_mixer"])
+   env.Append(LIBS=["GL", "SDL", "SDL_mixer","SDL_ttf"])
 
 if (env['PLATFORM'] == 'darwin'):
    env.Append(LIBS=["RepublicEngine"])
