Added a sound manager, but I don't think it's working because of how resourcemanager is initalized

--- a/src/SConstruct
+++ b/src/SConstruct
@@ -15,6 +15,8 @@ if (env['PLATFORM'] == 'darwin'):
 else:
    env.Append(LIBS=["RepublicEngine"]+env['LIBS'])
 
+env.Append(CXXFLAGS=["-g"])
+
 #Prawk! Stupid hack, part 1: In an ideal world, I would build a library out of
 # game using it's Sconscript file
 for subdir in ['render','engine','tools']:
